feat: change name title

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Food Hub</title>
+    <title>Taste Hub</title>
   </head>
   <body>
     <div id="root"></div>
